Add first table in db

--- a/WebApiTransfer/appsettings.json
+++ b/WebApiTransfer/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=ep-proud-lake-ag7hg9ct-pooler.c-2.eu-central-1.aws.neon.tech; Database=neondb; Username=neondb_owner; Password=npg_uxAsSG2lDN7d; SSL Mode=VerifyFull; Channel Binding=Require;"
+  }
 }
